# python_thai_ocr

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_gui.py
src/thai_ocr/: gui.py  processor.py
tests/: test_processor.py
